# transcriber

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/rvrb_transcriber/: __init__.py  cli.py  engine.py  mcp.py  models.py  provider.py
tests/: test_provider.py  test_transcriber.py
