[project]
name = "rvrb-transcriber"
version = "0.1.0"
description = "Atomic audio/video transcription — a composable satellite in the reverberage ecosystem"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Juan Manuel Daza", email = "juan@daza.ar"},
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
]

[project.optional-dependencies]
local = ["openai-whisper"]
openai = ["openai>=1"]
dev = ["pytest>=8", "pytest-cov>=5", "openai>=1"]
all = ["openai-whisper", "openai>=1"]

[project.scripts]
rvrb-transcribe = "rvrb_transcriber.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rvrb_transcriber"]

[tool.pytest.ini_options]
testpaths = ["tests"]
